// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group - component render should render correctly 1`] = `
<Fragment>
  <Text
    filterBy=""
    groups={Array []}
    isDisabled={false}
    isFilterable={false}
    onChange={[Function]}
    onSubmit={[Function]}
    selected={Object {}}
    showMoreTitle="Show more"
    value="[object Object]"
  />
</Fragment>
`;

exports[`Group - component render should render correctly placeholder 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    aria-labelledby=""
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    isCreatable={false}
    isDisabled={false}
    isGrouped={true}
    isOpen={false}
    isPlain={false}
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="some placeholder"
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    variant="single"
    width=""
  >
    <Component
      id="group-0"
      key="0"
      label="First value"
      value={0}
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </Component>
    <Component
      id="group-second"
      key="second"
      label="Second value"
      value="second"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </Component>
    <Component
      id="group-third"
      key="third"
      label="Third value"
      value="third"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </Component>
  </Select>
</Fragment>
`;

exports[`Group - component render should render correctly with items - isDisabled 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    aria-labelledby=""
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    isCreatable={false}
    isDisabled={true}
    isGrouped={true}
    isOpen={false}
    isPlain={false}
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    variant="single"
    width=""
  >
    <Component
      id="group-0"
      key="0"
      label="First value"
      value={0}
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </Component>
    <Component
      id="group-second"
      key="second"
      label="Second value"
      value="second"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </Component>
    <Component
      id="group-third"
      key="third"
      label="Third value"
      value="third"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </Component>
  </Select>
</Fragment>
`;

exports[`Group - component render should render correctly with items 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    aria-labelledby=""
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    isCreatable={false}
    isDisabled={false}
    isGrouped={true}
    isOpen={false}
    isPlain={false}
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    variant="single"
    width=""
  >
    <Component
      id="group-0"
      key="0"
      label="First value"
      value={0}
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </Component>
    <Component
      id="group-second"
      key="second"
      label="Second value"
      value="second"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </Component>
    <Component
      id="group-third"
      key="third"
      label="Third value"
      value="third"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </Component>
  </Select>
</Fragment>
`;

exports[`Group - component render should render correctly with items and default value 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    aria-labelledby=""
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    isCreatable={false}
    isDisabled={false}
    isGrouped={true}
    isOpen={false}
    isPlain={false}
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    variant="single"
    width=""
  >
    <Component
      id="group-0"
      key="0"
      label="First value"
      value={0}
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </Component>
    <Component
      id="group-second"
      key="second"
      label="Second value"
      value="second"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </Component>
    <Component
      id="group-third"
      key="third"
      label="Third value"
      value="third"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </Component>
  </Select>
</Fragment>
`;

exports[`Group - component render should render correctly with items and selected value 1`] = `
<Fragment>
  <Select
    aria-label="Select Input"
    aria-labelledby=""
    className=""
    clearSelectionsAriaLabel="Clear all"
    createText="Create"
    customBadgeText={null}
    customContent={null}
    direction="down"
    hasInlineFilter={false}
    inlineFilterPlaceholderText={null}
    isCreatable={false}
    isDisabled={false}
    isGrouped={true}
    isOpen={false}
    isPlain={false}
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onFilter={null}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText=""
    removeSelectionAriaLabel="Remove"
    selections={Array []}
    toggleAriaLabel="Options menu"
    toggleIcon={null}
    toggleId={null}
    typeAheadAriaLabel=""
    variant="single"
    width=""
  >
    <Component
      id="group-0"
      key="0"
      label="First value"
      value={0}
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="first"
      >
        First value
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="First value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        Second value
      </SelectOption>
    </Component>
    <Component
      id="group-second"
      key="second"
      label="Second value"
      value="second"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Checkbox
          className=""
          id="1-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First checkbox"
          name="1-0"
          onChange={[Function]}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Second value"
        onClick={[Function]}
        sendRef={[Function]}
        value="some-value"
      >
        <Checkbox
          className=""
          id="some-value"
          isChecked={true}
          isDisabled={false}
          isValid={true}
          label="Second checkbox"
          name="some-value"
          onChange={[Function]}
        />
      </SelectOption>
    </Component>
    <Component
      id="group-third"
      key="third"
      label="Third value"
      value="third"
    >
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="0"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value=""
      >
        <Radio
          className=""
          id="2-0"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="First radio"
          name="2-0"
          onChange={[Function]}
          value={0}
        />
      </SelectOption>
      <SelectOption
        className=""
        component="button"
        index={0}
        isChecked={false}
        isDisabled={false}
        isNoResultsOption={false}
        isPlaceholder={false}
        isSelected={false}
        key="1"
        keyHandler={[Function]}
        label="Third value"
        onClick={[Function]}
        sendRef={[Function]}
        value="1"
      >
        <Radio
          className=""
          id="2-1"
          isChecked={false}
          isDisabled={false}
          isValid={true}
          label="Second radio"
          name="2-1"
          onChange={[Function]}
          value={1}
        />
      </SelectOption>
    </Component>
  </Select>
</Fragment>
`;
